@@ -4,7 +4,6 @@
  * Copyright 2011-2013 Patrick Mairif.
  * The program is distributed under the terms of the Apache License (ALv2).
  *
- * created: 2011-12-22
  * tabstop=4, charset=UTF-8
  */
 package de.highbyte_le.weberknecht.request.routing;
@@ -21,11 +20,29 @@ import de.highbyte_le.weberknecht.conf.WeberknechtConf;
  */
 public class AreaCapableRouter implements Router {
 	
+	/**
+	 * pattern for the whole URI
+	 */
 	private static final Pattern pattern = Pattern.compile(
-			"([/a-z0-9_-]+)?/([a-z0-9_-]+)(![a-z0-9_-]*)?\\.([a-z]+)",	//$NON-NLS-1$
+			"([/a-z0-9_-]+)?/([a-z0-9_!-]+\\.[a-z]+)",	//$NON-NLS-1$
 			Pattern.CASE_INSENSITIVE
 	); 
 
+	/**
+	 * pattern for the action part
+	 */
+	private static final Pattern actionPattern = Pattern.compile(
+			"([a-z0-9_-]+)(![a-z0-9_-]*)?\\.([a-z]+)",	//$NON-NLS-1$
+			Pattern.CASE_INSENSITIVE
+	);
+	
+	/**
+	 * pattern for the path part
+	 */
+	private static final Pattern pathPattern = Pattern.compile("[/a-z0-9_-]+", Pattern.CASE_INSENSITIVE); 	//$NON-NLS-1$
+	
+	private WeberknechtConf conf = null;
+	
 	/* (non-Javadoc)
 	 * @see de.highbyte_le.weberknecht.request.routing.Router#routeUri(java.lang.String)
 	 */
@@ -33,17 +50,37 @@ public class AreaCapableRouter implements Router {
 	public RoutingTarget routeUri(String servletPath) {
 		RoutingTarget target = null;
 		
-		//TODO default action per area
-		
 		Matcher areaMatcher = pattern.matcher(servletPath);
 		if (areaMatcher.matches()) {
 			String path = areaMatcher.group(1);
-			String baseName = areaMatcher.group(2);
-			String t = areaMatcher.group(3);
-			String suffix = areaMatcher.group(4);
+			String action = areaMatcher.group(2);
 			
 			AreaPath areaPath = createPath(path);
-			
+			target = createTarget(areaPath, action);
+		}
+		else {	//check default action
+			Matcher m = pathPattern.matcher(servletPath);
+			if (m.matches()) {
+				AreaPath areaPath = createPath(servletPath);
+				
+				String defaultAction = conf.getDefaultAction(areaPath);
+				if (defaultAction != null)
+					target = createTarget(areaPath, defaultAction);
+			}
+		}
+		
+		return target;
+	}
+	
+	protected RoutingTarget createTarget(AreaPath areaPath, String actionString) {
+		RoutingTarget target = null;
+
+		Matcher m = actionPattern.matcher(actionString);
+		if (m.matches()) {
+			String baseName = m.group(1);
+			String t = m.group(2);
+			String suffix = m.group(3);
+
 			String task = null;
 			if (t != null && t.length() > 1)
 				task = t.substring(1);
@@ -72,6 +109,6 @@ public class AreaCapableRouter implements Router {
 	 */
 	@Override
 	public void setConfig(WeberknechtConf conf) {
-		//
+		this.conf = conf;
 	}
 }
