@@ -1,0 +1,13 @@
+<?xml version="1.0" encoding="UTF-8"?>
+<weberknecht>
+	<area default="foo.do">
+		<action name="foo" class="de.highbyte_le.weberknecht.FooAction" />
+		<action name="bar" class="de.highbyte_le.weberknecht.BarAction" />
+	</area>
+
+	<!-- another area without default -->
+	<area name="a1">
+		<action name="foo1" class="de.highbyte_le.weberknecht.FooAction" />
+		<action name="bar1" class="de.highbyte_le.weberknecht.BarAction" />
+	</area>
+</weberknecht>
