@@ -1,0 +1,13 @@
+<?xml version="1.0" encoding="UTF-8"?>
+<weberknecht>
+	<actions default="foo.do">
+		<action name="foo" class="de.highbyte_le.weberknecht.FooAction" />
+		<action name="bar" class="de.highbyte_le.weberknecht.BarAction" />
+	</actions>
+
+	<!-- another area without default -->
+	<actions area="a1">
+		<action name="foo1" class="de.highbyte_le.weberknecht.FooAction" />
+		<action name="bar1" class="de.highbyte_le.weberknecht.BarAction" />
+	</actions>
+</weberknecht>
